--- a/ChannelEngineWebApp/Pages/_Host.cshtml
+++ b/ChannelEngineWebApp/Pages/_Host.cshtml
@@ -32,5 +32,6 @@
 </div>
 
 <script src="_framework/blazor.server.js"></script>
+<script src="_content/Microsoft.AspNetCore.ProtectedBrowserStorage/protectedBrowserStorage.js"></script>
 </body>
 </html>
